# ble-peripheral-rust

./: Cargo.toml  Readme.md
examples/: server.rs
src/: error.rs  lib.rs  uuid.rs
src/gatt/: characteristic.rs  descriptor.rs  mod.rs  peripheral_event.rs  properties.rs  service.rs
src/peripheral/: mod.rs
src/peripheral/bluez/: bluez_utils.rs  characteristic_utils.rs  mod.rs
src/peripheral/corebluetooth/: characteristic_utils.rs  error.rs  mac_extensions.rs  mac_utils.rs  mod.rs  peripheral_delegate.rs  peripheral_manager.rs
src/peripheral/winrt/: characteristic_utils.rs  error.rs  mod.rs  peripheral_manager.rs  win_event_handler.rs  win_utils.rs
